force-app/src/objects/TR1__Candidate_Availability_D2D__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Availability_Date__c</fullName>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Availability__c</fullName>
        <label>Candidate Availability</label>
        <referenceTo>TR1__Candidate_Availability__c</referenceTo>
        <relationshipName>CandidateAvailabilityD2Ds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report_Schedule_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report Schedule Secondary</label>
        <referenceTo>TR1__Closing_Report_Schedule__c</referenceTo>
        <relationshipLabel>Candidate Schedules (Closing Report Schedule Secondary)</relationshipLabel>
        <relationshipName>CandidateSchedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report Schedule</label>
        <referenceTo>TR1__Closing_Report_Schedule__c</referenceTo>
        <relationshipLabel>Candidate Schedules</relationshipLabel>
        <relationshipName>CandidateSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Candidate Schedule</label>
    <nameField>
        <displayFormat>CAD-{0000000}</displayFormat>
        <label>Candidate Availability D2D Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>